kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-go-application-pod
  namespace: default
  labels:
    app: demo-go-application
spec:
  containers:
    - name: demo-go-application
      image: technovacdemo.azurecr.io/demo-go-application:v1
      ports:
        - containerPort: 8080
      readinessProbe:
        httpGet:
          path: /health
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 10
      livenessProbe:
        httpGet:
          path: /health
          port: 8080
        initialDelaySeconds: 15
        periodSeconds: 10
      resources:
        limits:
          cpu: "500m"
          memory: "256Mi"
        requests:
          cpu: "200m"
          memory: "128Mi"
