kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-go-application-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: demo-go-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
